# infini

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LAUNCH.md  LICENSE  MANIFESTO.md  Makefile  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  STATUS.md  SUMMARY.md  hn-post-infini-audit.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  rfc-proposal.yml
.github/workflows/: infini-ci.yml  infini-guard.yml  publish.yml
adapters/codemap/: README.md  adapter.yaml  codemap_adapter.py
adapters/codex/: README.md  adapter.yaml
adapters/crewai/: README.md  adapter.yaml
adapters/goose/: README.md  adapter.yaml
adapters/hermes/: README.md  adapter.yaml  hermes_adapter.py
adapters/langgraph/: README.md  adapter.yaml  langgraph_adapter.py
adapters/local/: README.md  adapter.yaml  local_adapter.py
adapters/mastra/: README.md  adapter.yaml
adapters/openclaw/: README.md  adapter.yaml  openclaw_adapter.py  resolver.py
assets/: demo_frame.html  demo_full.html  demo_short.html  loop-graph.html  marketplace.html  observatory.html  replay-timeline.html  spaghetti-to-spec.html  verification-dashboard.html
benchmarks/: README.md  browser-loop.md  coding-loop.md  compliance-loop.md  hybrid-loop.md  research-loop.md
benchmarks/browser-automation/: README.md
benchmarks/coding/: README.md
benchmarks/compliance/: README.md
benchmarks/cost-optimization/: README.md
benchmarks/hybrid-agent/: README.md
benchmarks/planning/: README.md
benchmarks/refactoring/: README.md
benchmarks/research/: README.md
bounties/: README.md
brand/: README.md  diagram-style.md  palette.md  typography.md
ci/: README.md  check_docs_commands.py  check_schema_sync.py  generate_matrix.py
cli/: README.md  pyproject.toml
cli/src/infini/: __init__.py  __main__.py  adapters.py  audit.py  certify.py  cli.py  conformance.py  db.py  diff.py  engine.py  inspect.py  live_engine.py  mcp_runtime.py  memory.py  mock.py  orchestrator.py  parse.py  patterns.py  registry_cli.py  replay.py  schema.json  setup.py  skills.py  task_manager.py  trace.py  ui.py  verifier.py
cli/src/infini_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli/tests/: conftest.py  test_certify.py  test_langgraph_adapter.py  test_mock.py  test_parse.py
docs/: DECISIONS.md  PORTABILITY_CASE_STUDY.md  PORTABILITY_PROOF.md  README.md  adapter-bounty.md  adopters.md  certification-program.md  community.md  comparison.md  demo.md  examples.md  governance.md  launch-and-adoption-playbook.md  launch-materials.md  loop-engineering.md  mcp-strategy.md  tutorial.md
docs/adr/: ADR-001-sqlite-not-redis.md  ADR-002-anthropic-skills-standard.md  ADR-003-verbatim-storage.md  README.md
docs/anti-patterns/: README.md  hallucination-chains.md  hidden-state.md  infinite-loops.md  missing-verification.md  no-exit-condition.md  over-planning.md  prompt-soup.md  tool-spam.md  unbounded-costs.md
docs/blog/: scaling-infini.md
docs/handbook/: README.md  adapter-development.md  architecture.md  certification.md  community.md  design-philosophy.md  getting-started.md  governance.md  loop-engineering.md  marketplace.md  mcp-roadmap.md  memory.md  observability.md  portability.md  replay.md  standards.md  verification.md  why-loopfiles.md
docs/patterns/: README.md  budget-guard.md  escalation.md  retry.md  (+10 more)
examples/: README.md  auth-module.yaml  hello-world.yaml  rag-pipeline.yaml
loom/: CHANGELOG.md  README.md
loom/cli/: loom.py  pyproject.toml
loops/: README.md  coding-loop.yaml  content-loop.yaml  debug-loop.yaml  doc-sync-loop.yaml  migration-loop.yaml  oncall-loop.yaml  outreach-loop.yaml  refactor-loop.yaml  review-loop.yaml  test-gen-loop.yaml
marketplace/: README.md  coding.md  compliance.md  education.md  finance.md  healthcare.md  infrastructure.md  legal.md  marketing.md  research.md  sales.md  security.md  seo.md
observatory-ui/: README.md  package-lock.json  package.json
pipelines/: content-pipeline.yaml
prompts/: loop-engineer.md
proof/: Loopfile.yaml  README.md
registry/: README.md  manifest-schema.json  metadata-schema.md  openapi.yaml  protocol.md
releases/: migration-v0.2.md  v0.2.0.md
scripts/: demo-side-by-side.sh
sdk/: README.md  adapter-interface.md  certification-guide.md  publishing-guide.md  testing-guide.md
spec/: compatibility.md  grammar.ebnf  loopfile-v1.md  migration.md  schema.json  state-format-v1.md  versions.md
state/: loop_state.json  memory.json  todo.md
verification/: external_checks.md  llm_judge_prompt.md  rubric.md  test_plan.md
(+292 files in other folders)
