[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infini-cli"
version = "1.0.0"
description = "INFINI — the open standard for agent loops. Write a Loopfile, run it on any engine."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "NickAiNYC and INFINI contributors" }]
keywords = ["agents", "loops", "ai", "standard", "loopfile", "infini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "rich>=13.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
ui = ["flask>=3.0"]

[project.scripts]
infini = "infini.cli:main"

[project.urls]
Homepage = "https://github.com/NickAiNYC/infini"
Documentation = "https://github.com/NickAiNYC/infini#readme"
Repository = "https://github.com/NickAiNYC/infini"
Issues = "https://github.com/NickAiNYC/infini/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
infini = ["schema.json"]
