[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infini-cli"
version = "0.1.0"
description = "CLI for validating, inspecting, replaying, and running Loopfiles."
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "INFINI Contributors" }]
keywords = ["agents", "ai", "loops", "loopfile", "automation", "cli"]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "pyyaml>=6.0"
]

[project.urls]
Homepage = "https://github.com/NickAiNYC/infini"
Repository = "https://github.com/NickAiNYC/infini"
Issues = "https://github.com/NickAiNYC/infini/issues"

[project.scripts]
infini = "infini_cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
